# monorepo-bazel-test

./: .bazelignore  .gitignore  .nvim.lua  BUILD.bazel  MODULE.bazel  go.mod  go.work  go.work.sum  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
api/: BUILD.bazel  openapi.yaml  package.json
api/components/schemas/: Category.yaml  Pet.yaml
api/paths/: pet.yaml  pet_findByStatus.yaml  pet_findByTags.yaml  pet_{petId}.yaml  pet_{petId}_uploadImage.yaml  store_order.yaml  store_order_{orderId}.yaml  user.yaml  user_createWithArray.yaml  user_createWithList.yaml  user_login.yaml  user_logout.yaml  user_{username}.yaml
services/pet/: BUILD.bazel  go.mod  main.go
tools/: gopackagedriver.sh
web/: package.json
web/components/: package.json
