bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "openapi_tools_generator_bazel", version = "0.2.1")

openapi_gen = use_extension("@openapi_tools_generator_bazel//:extension.bzl", "openapi_gen")
openapi_gen.client(
    sha256 = "f18d771e98f2c5bb169d1d1961de4f94866d2901abc1e16177dd7e9299834721",
    version = "6.5.0",
)
use_repo(openapi_gen, "openapi_tools_generator_bazel_cli")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//:go.work")
# use_repo(go_deps, "com_github_gin_gonic_gin")

# use_repo(
#     go_deps,
#     "com_github_gin_gonic_gin",
# )
