load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_js//js:defs.bzl", "js_run_binary")

npm_link_all_packages(
    name = "node_modules"
)

js_run_binary(
    name = "bundle",
    srcs = glob(["**/*.yaml"]),
    outs = ["openapi.combined.yaml"],
    args = [
        "bundle",
        "--output",
        "$(rootpath openapi.combined.yaml)", 
        "$(rootpath openapi.yaml)",
    ],
    chdir = package_name(),
    tool = ":node_modules/@redocly/cli",
    patch_node_fs = False,
)
